--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="buttonInvite">Пригласить</string>
     <string name="favoriteTitle">Избранное</string>
     <string name="buttonDetail">Детали</string>
+    <string name="buttonWatch">Посмотреть позже</string>
 
 </resources>
