--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,7 @@
     <string name="favoriteTitle">Избранное</string>
     <string name="buttonDetail">Детали</string>
     <string name="buttonWatch">Посмотреть позже</string>
+    <string name="buttonEdit">Изменить</string>
+    <string name="sheduleTitle">Смотреть позже</string>
 
 </resources>
