--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,5 @@
 <resources translatable="false">
     <string name="app_name">Поиск фильмов</string>
-    <string name="imageView1Description">Звездный путь</string>
-    <string name="imageView2Description">Стартрек. Возмездие</string>
-    <string name="imageView3Description">Стартрек. Бесконечность</string>
-    <string name="img1TextView">Звездный путь</string>
-    <string name="img3TextView">Стартрек. Бесконечность</string>
-    <string name="img2TextView">Стартрек. Возмездие</string>
-    <string name="img1Description"> Когда Нерон с планеты Ромул приходит из будущего,
-        чтобы отомстить Федерации, конкуренты Кирк и Спок должны объединиться,
-        чтобы не дать ему разрушить все, что им дорого. Во время этого будоражащего путешествия,
-        наполненного эффектными боями, юмором и космическими угрозами, новоиспеченные члены команды
-        военного корабля «Энтерпрайз» смело встретятся лицом к лицу с невообразимыми опасностями.
-    </string>
-    <string name="img2Description"> Вернувшись на Землю, команда корабля «Энтерпрайз» обнаруживает,
-        что деятельность и принципы их организации подорваны изнутри. Флот скован необъяснимым ужасом
-        и бездействует, пока мир все глубже погружается в бездну.
-        Капитан Кирк берет на себя руководство операцией по поимке злодея, ответственного за этот хаос
-        и способного уничтожить все человечество.
-        В запутанной игре не на жизнь, а на смерть, любовь и дружба будут принесены в жертву ради
-        единственного, что осталось у Кирка - его команды.
-    </string>
-    <string name="img3Description"> Бесстрашная команда крейсера звездного флота «Энтерпрайз» исследует
-        неизведанные глубины космоса. Во время этого полного опасностей путешествия герои сталкиваются
-        с таинственной силой, ставящей под угрозу не только их миссию и стабильность Федерации, но и весь миропорядок.
-    </string>
     <string name="imgDetailDescription">Изображение фильма</string>
     <string name="commentText">Введите комментарий</string>
     <string name="buttonInvite">Пригласить</string>
@@ -32,5 +8,26 @@
     <string name="buttonWatch">Посмотреть позже</string>
     <string name="buttonEdit">Изменить</string>
     <string name="ScheduleTitle">Смотреть позже</string>
+    <string name="channelName">Channel name</string>
+    <string name="channelDescription">Channel description</string>
+    <string name="notificationTitle">Напоминание о просмотре</string>
+    <string name="notificationText">Приготовили попкорн? Пора смотреть фильм </string>
+    <string name="messageTextFCM">text</string>
+    <string name="channelNameFCM">Latest movie</string>
+    <string name="channelDescriptionFCM">Get the most newly created movie.</string>
+    <string name="dateTimeFormat">d.M.u H:m</string>
+    <string name="scheduleSaveSnackbar">Напоминание сохранено</string>
+    <string name="negativeButton">Нет</string>
+    <string name="positiveButton">Да</string>
+    <string name="inviteMessage">Привет! Приглашаю тебя посмотреть фильм </string>
+    <string name="chooserTitle">Отправить приглашение через: </string>
+    <string name="updateText">Обновить</string>
+    <string name="favouriteAddSnackbar">Фильм добавлен в список избранного</string>
+    <string name="cancelText">Отмена</string>
+    <string name="scheduleDeleteSnackbar">Напоминание удалено</string>
+    <string name="cinemaListTitle">Фильмы</string>
+    <string name="favouriteTitle">Избранное</string>
+    <string name="scheduleTitle">Смотреть позже</string>
+    <string name="favouriteDeleteSnackbar">Фильм удален из Избранного</string>
 
 </resources>
